--- a/src/pi/bestdeal/gui/Modifier_Deal.form
+++ b/src/pi/bestdeal/gui/Modifier_Deal.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
+<Form version="1.3" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
   </SyntheticProperties>
@@ -35,16 +35,14 @@
               <EmptySpace pref="132" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="txt_Prix" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="txt_nb_max_pers" max="32767" attributes="0"/>
-                      <Component id="txt_nb_min_pers" max="32767" attributes="0"/>
-                      <Component id="txt_nbpers" max="32767" attributes="0"/>
-                      <Component id="jDateChooser2" max="32767" attributes="0"/>
-                      <Component id="jDateChooser1" max="32767" attributes="0"/>
-                      <Component id="jScrollPane1" alignment="1" max="32767" attributes="0"/>
-                      <Component id="txt_pres" alignment="1" max="32767" attributes="0"/>
-                      <Component id="txt_Nom_Deal" alignment="1" max="32767" attributes="0"/>
-                  </Group>
+                  <Component id="txt_nb_max_pers" max="32767" attributes="0"/>
+                  <Component id="txt_nb_min_pers" max="32767" attributes="0"/>
+                  <Component id="txt_nbpers" max="32767" attributes="0"/>
+                  <Component id="jDateChooser2" max="32767" attributes="0"/>
+                  <Component id="jDateChooser1" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" alignment="1" max="32767" attributes="0"/>
+                  <Component id="txt_pres" alignment="1" max="32767" attributes="0"/>
+                  <Component id="txt_Nom_Deal" alignment="1" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
           </Group>
@@ -110,7 +108,7 @@
                   <Component id="jBt_Annuler" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jBt_Enregistrer" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="15" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -187,8 +185,14 @@
       </Properties>
     </Component>
     <Component class="com.toedter.calendar.JDateChooser" name="jDateChooser1">
+      <Properties>
+        <Property name="dateFormatString" type="java.lang.String" value="yyyy MMM d  "/>
+      </Properties>
     </Component>
     <Component class="com.toedter.calendar.JDateChooser" name="jDateChooser2">
+      <Properties>
+        <Property name="dateFormatString" type="java.lang.String" value="yyyy MMM d  "/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txt_nbpers">
       <Events>
