--- a/src/pi/bestdeal/gui/Authentification.form
+++ b/src/pi/bestdeal/gui/Authentification.form
@@ -6,7 +6,6 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -156,7 +155,7 @@
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/bestdeal.png"/>
+          <Image iconType="2" name="C:\Users\Dell\Desktop\bestdeal.png"/>
         </Property>
       </Properties>
     </Component>
